--- a/service.yaml
+++ b/service.yaml
@@ -1,19 +1,25 @@
-apiVersion: v1
-kind: Pod
+apiVersion: extensions/v1beta1
+kind: ReplicaSet
 metadata:
     name: busybox
 spec:
-    containers:
-        - image: busybox
-          name: busybox
-          command:
-              - sleep
-              - "3600"
-          imagePullPolicy: IfNotPresent
-    restartPolicy: Always
-    dnsPolicy: "None"
-    dnsConfig:
-        nameservers:
-            - 8.8.8.8
-        searches:
-            - example.com
+    replicas: 3
+    template:
+        metadata:
+            labels:
+                name: busybox
+        spec:
+            containers:
+                - image: busybox
+                  name: busybox
+                  command:
+                      - sleep
+                      - "3600"
+                  imagePullPolicy: IfNotPresent
+            restartPolicy: Always
+            dnsPolicy: "None"
+            dnsConfig:
+                nameservers:
+                    - 8.8.8.8
+                searches:
+                    - example.com
